implemented echo feature - renamed the package name to sample-socket-io-echo-server - added npm start command

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "sample-socket-io-server",
+  "name": "sample-socket-io-echo-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
